--- a/src/styles/SingleLoan.module.css
+++ b/src/styles/SingleLoan.module.css
@@ -2,7 +2,7 @@
 
 body {
     vertical-align: middle;
-  }
+}
 div.table-title {
   display: block;
   margin: auto;
@@ -11,7 +11,11 @@ div.table-title {
   width: 100%;
   
 }
-
+.column{
+  margin: auto;
+  text-align: center;
+  width: auto;
+}
 .table-title h3 {
    color: #fafafa;
    font-size: 30px;
@@ -68,7 +72,6 @@ tr {
   font-weight:normal;
   text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
- 
 tr:hover td {
   background:#4E5066;
   color:#FFFFFF;
